--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ></Spinner>
+        android:entries="@array/job_kind"></Spinner>
 
 
 </LinearLayout>
