--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,4 +7,12 @@
         <item>자영업자</item>
         <item>무직</item>
     </string-array>
+    <string-array name="final_school">
+        <item>중졸</item>
+        <item>고졸</item>
+        <item>대졸</item>
+        <item>대학원졸</item>
+        <item>그외</item>
+    </string-array>
+
 </resources>
