--- a/app/src/main/res/layout/company_list_item.xml
+++ b/app/src/main/res/layout/company_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,7 +12,9 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="#000000"
+            app:civ_border_width="2dp"
             android:id="@+id/logoImg"
             android:layout_width="60dp"
             android:layout_height="60dp"
